--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.0",
     "clsx": "^2.0.0",
-    "lucide-react": "^0.263.1",
+    "lucide-react": "^0.544.0",
     "next": "^15.5.4",
     "postcss": "^8.4.31",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
+    "remark-breaks": "^4.0.0",
     "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
