--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,12 +22,14 @@
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
     "remark-breaks": "^4.0.0",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8.51.0",
     "eslint-config-next": "14.0.0",
     "ts-node": "^10.9.2",
